log

do., 13 de mar. de 2022 16:02:34: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
31b5ed5
do., 13 de mar. de 2022 16:05:04: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
cf4131b
do., 13 de mar. de 2022 16:06:53: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
67d148e
do., 13 de mar. de 2022 16:11:51: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
34c22d6
do., 13 de mar. de 2022 16:12:56: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ad2513d
do., 13 de mar. de 2022 16:13:56: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'crearVector':
exercises.c:90:38: error: 'nV' is used uninitialized in this function [-Werror=uninitialized]
    Vector *nV = (Vector *) calloc (nV->capacidad,sizeof(Vector));
                                    ~~^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
65a3501
do., 13 de mar. de 2022 16:16:32: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
2f30441
do., 13 de mar. de 2022 16:46:55: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'crearVector':
exercises.c:91:6: error: 'nDatos.capacidad' is used uninitialized in this function [-Werror=uninitialized]
    n = nDatos.capacidad;
    ~~^~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
efd4366
do., 13 de mar. de 2022 16:49:40: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
45225d8
do., 13 de mar. de 2022 16:51:26: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:91:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return n;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
c0fc339
do., 13 de mar. de 2022 16:51:44: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
43c9667
do., 13 de mar. de 2022 16:57:42: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
3cd1321
